# ICL-GradSel

./: .gitignore  README.md  build_feature.sh  contrastive_alpaca.py  environment.yml  forward_path.py  get_feature.py  get_feature_causal.py  get_graphqa_feature.py  gradient_alpaca.py  graphqa.py  inference_appro.py  inference_appro_cone.py  main.py  mergedata.py  motivation.py  motivation.sh  motivation_quant.py  motivation_quant.sh  motivation_quant_addnoise.py  motivation_quant_avg_anchor.py  motivation_quant_hessian.py  motivation_quant_pca.py  motivation_quant_project.py  motivation_quant_random_sample.py  motivation_quant_vary_sample.py  notebook_combining_unlabled_samples.py  notebook_motivation_otherdata.py  notebook_motivation_unlabled.py  pyproject.toml  random_ensemble_ablation.py  setup.py  test.py  train_alpaca.py  zo_alpaca.py
PromptTuning/: Alcon_QA.py  train_alcon_rouge.py
custom/: alpaca_model.py
examples/: gradce.sh  ranens.sh  topk.sh
gradsel/: data.py  model.py
hessian_result/: estim_hessian.json  estim_loss.json  randomk_hessian.json  randomk_loss.json  run.ipynb  run.py  topk_hessian.json  topk_loss.json
inference_appro/: inference_appro.py  inference_appro.sh  inference_appro_cone.py  inference_appro_cone.sh  inference_appro_forsel.py  inference_appro_ranens.py  inference_appro_ranens.sh
linear_regression/: README.md
metaicl/: data.py  data_augment.py  data_backup.py  model.py
mezo/: icl.sh  lora.py  run.py  setup_env.md  start_instruction.md
motivation/: motivation.py  motivation.sh  motivation_quant.py  motivation_quant.sh  (+1 more)
(+170 files in other folders)
