[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradsel"
version = "0.1.0"
description = ""
readme = ""
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
  # "numpy>=1.26",  # add runtime deps here
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gradsel*"]
